[gd_scene load_steps=75 format=2]

[ext_resource path="res://src/objects/test-objects/Guns/Canon/canonball.png" type="Texture" id=1]
[ext_resource path="res://src/objects/test-objects/Guns/Bullets/AreaBullet.gd" type="Script" id=2]
[ext_resource path="res://src/objects/test-objects/Guns/Canon/big_100x100px.png" type="Texture" id=3]
[ext_resource path="res://src/objects/test-objects/Guns/Canon/bk_explo_one.png" type="Texture" id=4]

[sub_resource type="CapsuleShape2D" id=1]
radius = 7.16618
height = 0.0

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 3 )
region = Rect2( 100, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 3 )
region = Rect2( 200, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 3 )
region = Rect2( 300, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 3 )
region = Rect2( 400, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 3 )
region = Rect2( 500, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 3 )
region = Rect2( 600, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 3 )
region = Rect2( 700, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 3 )
region = Rect2( 0, 100, 100, 100 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 3 )
region = Rect2( 100, 100, 100, 100 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 3 )
region = Rect2( 200, 100, 100, 100 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 3 )
region = Rect2( 300, 100, 100, 100 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 3 )
region = Rect2( 400, 100, 100, 100 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 3 )
region = Rect2( 500, 100, 100, 100 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 3 )
region = Rect2( 600, 100, 100, 100 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 3 )
region = Rect2( 700, 100, 100, 100 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 3 )
region = Rect2( 0, 200, 100, 100 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 3 )
region = Rect2( 100, 200, 100, 100 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 3 )
region = Rect2( 200, 200, 100, 100 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 3 )
region = Rect2( 300, 200, 100, 100 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 3 )
region = Rect2( 400, 200, 100, 100 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 3 )
region = Rect2( 500, 200, 100, 100 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 3 )
region = Rect2( 600, 200, 100, 100 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 3 )
region = Rect2( 700, 200, 100, 100 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 3 )
region = Rect2( 0, 300, 100, 100 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 3 )
region = Rect2( 100, 300, 100, 100 )

[sub_resource type="SpriteFrames" id=29]
animations = [ {
"frames": [ SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ) ],
"loop": true,
"name": "default",
"speed": 100.0
} ]

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 4 )
region = Rect2( 4, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=31]
atlas = ExtResource( 4 )
region = Rect2( 68, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=32]
atlas = ExtResource( 4 )
region = Rect2( 132, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=33]
atlas = ExtResource( 4 )
region = Rect2( 196, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=34]
atlas = ExtResource( 4 )
region = Rect2( 260, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=35]
atlas = ExtResource( 4 )
region = Rect2( 324, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=36]
atlas = ExtResource( 4 )
region = Rect2( 388, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=37]
atlas = ExtResource( 4 )
region = Rect2( 452, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=38]
atlas = ExtResource( 4 )
region = Rect2( 516, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=39]
atlas = ExtResource( 4 )
region = Rect2( 580, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=40]
atlas = ExtResource( 4 )
region = Rect2( 644, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=41]
atlas = ExtResource( 4 )
region = Rect2( 708, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=42]
atlas = ExtResource( 4 )
region = Rect2( 772, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=43]
atlas = ExtResource( 4 )
region = Rect2( 836, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=44]
atlas = ExtResource( 4 )
region = Rect2( 900, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=45]
atlas = ExtResource( 4 )
region = Rect2( 964, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=46]
atlas = ExtResource( 4 )
region = Rect2( 1028, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=47]
atlas = ExtResource( 4 )
region = Rect2( 1092, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=48]
atlas = ExtResource( 4 )
region = Rect2( 1156, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=49]
atlas = ExtResource( 4 )
region = Rect2( 1220, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=50]
atlas = ExtResource( 4 )
region = Rect2( 1284, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=51]
atlas = ExtResource( 4 )
region = Rect2( 1348, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=52]
atlas = ExtResource( 4 )
region = Rect2( 1412, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=53]
atlas = ExtResource( 4 )
region = Rect2( 1476, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=54]
atlas = ExtResource( 4 )
region = Rect2( 1540, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=55]
atlas = ExtResource( 4 )
region = Rect2( 1604, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=56]
atlas = ExtResource( 4 )
region = Rect2( 1668, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=57]
atlas = ExtResource( 4 )
region = Rect2( 1732, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=58]
atlas = ExtResource( 4 )
region = Rect2( 1796, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=59]
atlas = ExtResource( 4 )
region = Rect2( 1860, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=60]
atlas = ExtResource( 4 )
region = Rect2( 1924, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=61]
atlas = ExtResource( 4 )
region = Rect2( 1988, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=62]
atlas = ExtResource( 4 )
region = Rect2( 2052, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=63]
atlas = ExtResource( 4 )
region = Rect2( 2116, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=64]
atlas = ExtResource( 4 )
region = Rect2( 2180, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=65]
atlas = ExtResource( 4 )
region = Rect2( 2244, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=66]
atlas = ExtResource( 4 )
region = Rect2( 2308, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=67]
atlas = ExtResource( 4 )
region = Rect2( 2372, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=68]
atlas = ExtResource( 4 )
region = Rect2( 2436, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=69]
atlas = ExtResource( 4 )
region = Rect2( 2500, 0, 64, 64 )

[sub_resource type="SpriteFrames" id=70]
animations = [ {
"frames": [ null, SubResource( 30 ), SubResource( 31 ), SubResource( 32 ), SubResource( 33 ), SubResource( 34 ), SubResource( 35 ), SubResource( 36 ), SubResource( 37 ), SubResource( 38 ), SubResource( 39 ), SubResource( 40 ), SubResource( 41 ), SubResource( 42 ), SubResource( 43 ), SubResource( 44 ), SubResource( 45 ), SubResource( 46 ), SubResource( 47 ), SubResource( 48 ), SubResource( 49 ), SubResource( 50 ), SubResource( 51 ), SubResource( 52 ), SubResource( 53 ), SubResource( 54 ), SubResource( 55 ), SubResource( 56 ), SubResource( 57 ), SubResource( 58 ), SubResource( 59 ), SubResource( 60 ), SubResource( 61 ), SubResource( 62 ), SubResource( 63 ), SubResource( 64 ), SubResource( 65 ), SubResource( 66 ), SubResource( 67 ), SubResource( 68 ), SubResource( 69 ) ],
"loop": true,
"name": "default",
"speed": 100.0
} ]

[node name="Canonball" type="Area2D"]
z_index = 2
collision_layer = 0
collision_mask = 3
script = ExtResource( 2 )
speed = 100

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 7, 0 )
rotation = 1.57079
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 7, 0 )
frames = SubResource( 2 )

[node name="ExplosionAnimatedSprite" type="AnimatedSprite" parent="."]
visible = false
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 29 )

[node name="ExplosionAnimatedSprite2" type="AnimatedSprite" parent="."]
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 70 )

[connection signal="animation_finished" from="ExplosionAnimatedSprite" to="." method="_on_ExplosionAnimatedSprite_animation_finished"]
[connection signal="animation_finished" from="ExplosionAnimatedSprite2" to="." method="_on_ExplosionAnimatedSprite2_animation_finished"]
